2010-03-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "temporary buf for key value" to `struct manifestation'.

	* base.h (manifestation): Add member `keyval'.
	* b-kwxout.c (expandline): Use `MANI (keyval)'.

2010-03-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "`BE (interactive)' valid" into `struct behavior'.

	* base.h (behavior): Add member `interactive_valid'.
	* rcsgen.c (ttystdin): Use `BE (interactive_valid)'.

2010-03-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use `bool' more.

	* rcsutil.c (cacheid): Use boolean for valid bit.

2010-03-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "-z handling state" into `struct behavior'.

	* base.h (behavior): Add member `zone_offset'.
	* rcstime.c (zone_offset, use_zone_offset): Delete vars.
	(str2date, zone_set, date2str): Use
	`BE (zone_offset.valid)', `BE (zone_offset.seconds)'.

2010-03-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use boolean to keep track of lexical error occurance.

	Here, "U" means "Throughout, use `LEX (erroneousp)'".
	* base.h (struct parse_state): Replace `nerr' with `erroneousp'.
	* b-complain.c (ERRONEOUS_X): New macro.
	(syserror, generic_error, generic_fatal): Use `ERRONEOUS_X'.
	* ci.c: U.
	* co.c: U.
	* merge.c: U.
	* rcs.c: U.
	* rcsclean.c: U.
	* rcsdiff.c: U.
	* rcsedit.c: U.
	* rcskeep.c: U.
	* rcslex.c: U.
	* rcsmerge.c: U.
	* rlog.c: U.

2010-03-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Abstract writes to stderr.

	Here, "I" means "#include "b-complain.h",
	"U" means "Throughout, use the funcs and macros from there".
	* b-complain.c (vcomplain, complain): New funcs.
	(COMPLAIN_PLUS_NEWLINE): New macro.
	(diagnose): New func.
	(whoami): New static func.
	(syserror, generic_warn, generic_error): New funcs.
	(die): New static func.
	(generic_fatal, fatal_syntax, fatal_sys): New funcs.
	* b-complain.h (vcomplain, complain, diagnose, syserror)
	(generic_warn, generic_error, generic_fatal, fatal_syntax)
	(fatal_sys): New func decls.