@@ -1,5 +1,16 @@
 2010-03-31  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int C] Avoid some function-static vars.
+
+	* rcsedit.c (setmtime): Make local var `amtime' non-static.
+	* rcsfnms.c [!HAVE_MKSTEMP] (homegrown_mkstemp): Likewise for `xrep'.
+	* rcsrev.c [REVTEST] (main): Likewise for `numricrevno'.
+	Also, do `bufautobegin' and `bufautoend' for it.
+	* rcslex.c (fd2_RILE): Delete static
+	local var `nothing'; use `FROM (to)', instead.
+
+2010-03-31  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Move "temporary buf for key value" to `struct manifestation'.
 
 	* base.h (manifestation): Add member `keyval'.
